<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Dashboard"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/Stocks"
            android:icon="@drawable/baseline_storage_24"
            android:title="@string/stocks" />
        <item
            android:id="@+id/Dues"
            android:icon="@drawable/baseline_price_change_24"
            android:title="@string/dues" />

        <item
            android:id="@+id/Parties"
            android:icon="@drawable/parties_icon"
            android:title="Parties" />
    </group>
</menu>